tests/fail/registering/recursive def.mmu
(sort s     ) 
 (def a (  ) ( s () ) (  ) a ) 
